Reworking + deleted msys2 suppor

--- a/cpp/{{ cookiecutter.project_name }}/.github/workflows/setup-linux-gcc/action.yml
+++ b/cpp/{{ cookiecutter.project_name }}/.github/workflows/setup-linux-gcc/action.yml
@@ -40,11 +40,11 @@ runs:
         sudo apt-get install -y pkg-config  # Required by meson to find dependencies?
         python -m pip install --upgrade pip
         python -m pip install meson ninja   # Install meson - ninja is needed by meson to do the actual compiling
-        {% if cookiecutter.include_python_extension != 'false' -%}
+        {% if cookiecutter.include_python_extension != 'na' -%}
         # Install python requirements.
         python -m pip install build  # Required for building python extension
         {%- endif %}
-        {% if cookiecutter.include_python_extension == 'true_with_numpy' -%}
+        {% if 'numpy' in cookiecutter.include_python_extension -%}
         python -m pip install numpy
         {%- endif %}
         {% if cookiecutter.boost_version != 'na' -%}
@@ -53,7 +53,7 @@ runs:
         # WARNING: Do not install pre-built boost binaries via a package manager. Pre-built boost binaries may not be complete unless built
         #          from scratch with certain dependendencies present (e.g., NumPy boost component requires your python installation to have
         #          numpy installed). Instead, set the version of boost to install (installation happens in subsequent steps).
-        {% if cookiecutter.include_python_extension == 'true_with_numpy' -%}
+        {% if 'boost_with_numpy' in cookiecutter.include_python_extension -%}
         #          
         #          If you want boost's python and numpy components available, you must have installed python (and numpy) prior to building.
         {%- endif %}
